# headlamp

./: .gitignore  Cargo.toml  README.md  headlamp.config.ts  headlamp.toml  nextest.toml
headlamp/: Cargo.toml  README.md
headlamp/assets/jest/: reporter.cjs  setup.cjs
headlamp/assets/pytest/: headlamp_pytest_plugin.py
headlamp/src/: args.rs  args_test.rs  cargo.rs  cargo_empty_model_test.rs  cargo_select.rs  cargo_select_test.rs  config.rs  config_ts.rs  diagnostics_trace.rs  fast_related.rs  git.rs  git_test.rs  help.rs  jest.rs  jest_config.rs  jest_coverage_test.rs  jest_discovery.rs  jest_ownership.rs  jest_threshold_test.rs  lib.rs  live_progress.rs  live_progress_test.rs  main.rs  parallel_stride.rs  process.rs  profile.rs  pytest.rs  pytest_artifacts_test.rs  pytest_coverage_test.rs  pytest_location_test.rs  pytest_select.rs  pytest_timing_test.rs  pythonpath.rs  pythonpath_test.rs  run.rs  seed_match.rs  session.rs  streaming.rs  test_model.rs  watch.rs
headlamp/src/args/: cli.rs  derive.rs  helpers.rs  mod.rs  tokens.rs  types.rs
headlamp/src/cargo/: adapters.rs  coverage.rs  coverage_abort_on_failure_semantics_test.rs  llvm_cov.rs  llvm_cov_test.rs  mod.rs  model_norm.rs  nextest.rs  paths.rs  paths_test.rs  run_trace.rs  runner_args.rs  runner_args_test.rs  rust_coverage_missing_test.rs  selection.rs
headlamp/src/config/: jsonish.rs
headlamp/src/config_ts/: evaluator.rs  expr.rs  mod.rs  resolver.rs  types.rs  utils.rs
headlamp/src/coverage/: coveragepy_json.rs  coveragepy_json_test.rs  istanbul.rs  istanbul_pretty.rs  istanbul_test.rs  lcov.rs  lcov_test.rs  llvm_cov_json.rs  llvm_cov_json_test.rs  mod.rs  model.rs  print.rs  statement_id.rs  thresholds.rs  thresholds_test.rs
headlamp/src/format/: ansi.rs  bridge_console.rs  bridge_http.rs  cargo_test.rs  codeframe.rs  colors.rs  console.rs  ctx.rs  details.rs  failure_diagnostics.rs  fns.rs  infra_failure.rs  libtest_json.rs  mod.rs  nextest.rs  paths.rs  raw_jest.rs  stacks.rs  terminal.rs  time.rs  unstructured_engine.rs  vitest.rs
headlamp/src/jest/: bridge.rs  coverage.rs  mod.rs  project_run.rs  selection.rs  streaming.rs
headlamp/src/live_progress/: classify.rs  frame.rs  mod.rs  test_line.rs  ticker.rs
headlamp/src/project/: classify.rs  markers.rs  markers_pyproject_test.rs  rust_manifest.rs  ts_js_manifest.rs
headlamp/src/pytest/: adapter.rs  coverage.rs
headlamp/src/rust_coverage/: mod.rs
headlamp/src/rust_parse/: attrs.rs  imports.rs  lex.rs  mod.rs  types.rs  util.rs
headlamp/src/rust_runner/: cargo_build.rs  coverage.rs  index.rs  libtest_parser.rs  libtest_parser_test.rs  mod.rs  stream_adapter.rs
headlamp/src/selection/: mod.rs  related_tests.rs  route_tree.rs
headlamp/tests/: cargo_select_test.rs  fast_related_cache_test.rs  headlamp_runner_rust_branch_coverage_test.rs  headlamp_runner_rust_coverage_smoke.rs  headlamp_runner_rust_smoke.rs  jest_discovery_cache_test.rs  jest_discovery_timeout_test.rs  jest_ownership_pattern_order_test.rs  live_progress_test.rs  parity_cache_dir_env_parity_test.rs  parity_diff_report_test.rs  parity_fast_related_cache_parity_test.rs  parity_jest_coverage_flags_parity_test.rs  parity_jest_coverage_istanbul_text_table_parity_test.rs  parity_jest_coverage_parity_test.rs  parity_jest_coverage_ui_tty_parity_test.rs  parity_jest_discovery_error_parity_test.rs  parity_jest_http_routes_parity_test.rs  parity_jest_name_pattern_only_parity_test.rs  parity_jest_ordering_parity_test.rs  parity_jest_raw_output_fallback_parity_test.rs  parity_jest_render_ui_tty_parity_test.rs  parity_jest_render_ui_tty_stdout_piped_parity_test.rs  parity_jest_reporting_parity_test.rs  parity_matrix_audit_test.rs  parity_parity_meta_test.rs  parity_repo_testdev_parity_test.rs  parity_repo_testdev_scenarios_parity_test.rs  parity_runner_cargo_vs_jest_parity_test.rs  pytest_select_test.rs
headlamp/tests/parity_repo_e2e_support/: mod.rs
headlamp/tests/parity_support/: mod.rs  (+6 more)
headlamp_core/: Cargo.toml
headlamp_core/src/: args.rs  config.rs  error.rs  lib.rs
headlamp_core/tests/: args_parse_test.rs  cargo_test_stream_parser_test.rs  config_load_test.rs  format_console_filter_test.rs  format_unit_test.rs  istanbul_parse_test.rs  lcov_parse_test.rs  nextest_parse_parity_test.rs  nextest_stream_parser_test.rs  only_failures_footer_always_prints_test.rs  project_classifier_test.rs  selection_dependency_language_test.rs  selection_import_extract_test.rs  selection_related_tests_test.rs  selection_route_index_test.rs  selection_ts_js_import_resolution_test.rs  vitest_render_snapshot_test.rs
headlamp_tests/: Cargo.toml
headlamp_tests/tests/: args_parse_test.rs  cargo_llvm_cov_branch_args_test.rs  cargo_select_test.rs  cargo_test_report_time_duration_test.rs  cargo_test_stream_parser_test.rs  changed_last_release_test.rs  codeframe_relative_path_test.rs  config_load_test.rs  coverage_pipeline_perf_test.rs  coverage_pretty_perf_test.rs  coverage_print_opts_test.rs  coverage_render_lcov_test.rs  expected_received_nonjest_snapshot_test.rs  fast_related_seed_terms_test.rs  file_length_guard_test.rs  format_console_filter_test.rs  format_unit_test.rs  function_length_guard_test.rs  git_short_head_test.rs  help_text_test.rs  infra_failure_render_snapshot_test.rs  istanbul_parse_test.rs  jest_discovery_cache_test.rs  jest_discovery_timeout_test.rs  jest_ownership_pattern_order_test.rs  lcov_parse_test.rs  libtest_json_stream_parser_test.rs  live_progress_test.rs  live_progress_test_line_test.rs  nextest_parse_parity_test.rs  nextest_stream_parser_test.rs  no_artifacts_pytest_test.rs  npm_package_smoke_test.rs  only_failures_footer_always_prints_test.rs  parallel_stride_test.rs  parity_cargo_render_ui_tty_parity_test.rs  parity_diff_report_test.rs  parity_fast_related_cache_parity_test.rs  parity_jest_basic_parity_test.rs  parity_jest_changed_selection_parity_test.rs  (+28 more)
treemap_viewer/: Cargo.toml
treemap_viewer/src/: app.rs  layout.rs  lib.rs  main.rs  model.rs  ui.rs  util.rs  view.rs
treemap_viewer/tests/: analysis_test.rs  fallback_perf_test.rs  treemap_layout_test.rs
(+221 files in other folders)
