[package]
name = "headlamp"
version = "0.1.0"
edition = "2024"

[dependencies]
headlamp_core = { path = "../headlamp_core" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
sha1 = "0.10.6"
hex = "0.4.3"
ignore = "0.4.23"
aho-corasick = "1.1.3"
globset = "0.4.15"
git2 = { version = "0.20.0", default-features = false, features = [
    "vendored-libgit2",
] }
duct = "0.13.7"
path-slash = "0.2.1"
tempfile = "3.14.0"
indexmap = "2.11.0"
pathdiff = "0.2.3"
dunce = "1.0.5"
which = "7.0.1"

[dev-dependencies]
regex = "1.11.1"
similar-asserts = "1.6.1"
