[package]
name = "headlamp"
version = "0.1.37"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Dependency-graph based test runner in Rust that supports Rust, Python, and JavaScript."
homepage = "https://github.com/dbpiper/headlamp"
repository = "https://github.com/dbpiper/headlamp"
readme = "README.md"
keywords = ["testing", "cli", "jest", "nextest", "vitest"]
categories = ["development-tools::testing", "command-line-utilities"]
exclude = ["tests/**"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
thiserror = "2.0.9"
sha1 = "0.10.6"
hex = "0.4.3"
ignore = "0.4.23"
aho-corasick = "1.1.3"
globset = "0.4.15"
git2 = { version = "0.20.0", default-features = false, features = [
    "vendored-libgit2",
] }
duct = "0.13.7"
path-slash = "0.2.1"
tempfile = "3.14.0"
indexmap = "2.11.0"
pathdiff = "0.2.3"
dunce = "1.0.5"
which = "7.0.1"
regex = "1.11.1"
fancy-regex = "0.13.0"
semver = "1.0.23"
json5 = "0.4.1"
once_cell = "1.20.2"
clap = { version = "4.5.23", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
terminal_size = "0.4.3"
unicode-width = "0.2.0"
dashmap = "6.1.0"
lcov = "0.8.1"
os_pipe = "1.2.1"
wait-timeout = "0.2.1"
syn = { version = "2.0.96", features = ["full"] }
toml = "0.8.19"
oxc_parser = "0.102.0"
oxc_allocator = "0.102.0"
oxc_span = "0.102.0"
oxc_ast = "0.102.0"
oxc_ast_visit = "0.102.0"
oxc_syntax = "0.102.0"
oxc_resolver = "11.16.0"
rustc-demangle = "0.1.24"

[dev-dependencies]
insta = { version = "1.42.0", features = ["filters"] }
similar-asserts = "1.6.1"
