[package]
name = "headlamp_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
thiserror = "2.0.9"
globset = "0.4.15"
regex = "1.11.1"
fancy-regex = "0.13.0"
json5 = "0.4.1"
once_cell = "1.20.2"
ignore = "0.4.23"
indexmap = "2.11.0"
clap = { version = "4.5.23", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
which = "7.0.1"
git2 = { version = "0.20.0", default-features = false, features = [
    "vendored-libgit2",
] }
terminal_size = "0.4.3"
duct = "0.13.7"
path-slash = "0.2.1"
dunce = "1.0.5"
dashmap = "6.1.0"
lcov = "0.8.1"
comfy-table = "7.2.1"
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.14.0"
insta = { version = "1.42.0", features = ["filters"] }
similar-asserts = "1.6.1"
