[package]
name = "headlamp_tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
walkdir = "2.5.0"

[dev-dependencies]
headlamp = { path = "../headlamp" }
headlamp_parity_support = { path = "../headlamp_parity_support" }
os_pipe = "1.2.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
regex = "1.11.1"
tempfile = "3.14.0"
similar-asserts = "1.6.1"
insta = { version = "1.42.0", features = ["filters"] }
sha1 = "0.10.6"
hex = "0.4.3"
which = "7.0.1"
path-slash = "0.2.1"
git2 = { version = "0.20.0", default-features = false, features = [
    "vendored-libgit2",
] }
proc-macro2 = { version = "1.0.92", features = ["span-locations"] }
syn = { version = "2.0.96", features = ["full", "visit"] }
