[package]
name = "treemap_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["desktop"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
rfd = "0.15.4"
addr2line = { version = "0.25.1", features = ["fallible-iterator"] }
gimli = "0.32.3"
object = "0.37.3"
rayon = "1.11.0"
rustc-demangle = "0.1.26"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
